k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wow
  labels:
    app.kubernetes.io/part-of: wow-platform
